# mdk-sdk

./: .gitmodules  CMakeLists.txt  Changelog.md  README.Android.md  README.Linux.md  README.WinRT.md  README.Windows.md  README.iOS.md  README.macOS.md  README.md  README.rpi.md  README.sunxi.md  ci-after-build.sh  ci-before-build.sh  mdk.podspec  mksdk.sh  mksrc.sh  upload.mk
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: build.yml
nuget/: MDK.targets  README.md  mdk.nuspec
